--- a/index.html
+++ b/index.html
@@ -219,38 +219,38 @@
                 <div class="col-12 col-sm-12 col-md-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
-                        <div class="mobile_item_plus"><img src="../site_2/images/plus.png" alt=""></div>
+                        <div class="mobile_item_plus"><img src="images/plus.png" alt=""></div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_subtitle">надежная подача</div>
-                        <div class="mobile_item_plus"><img src="../site_2/images/plus.png" alt=""></div>
+                        <div class="mobile_item_plus"><img src="images/plus.png" alt=""></div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_subtitle">прозрачные цены</div>
-                        <div class="mobile_item_plus"><img src="../site_2/images/plus.png" alt=""></div>
+                        <div class="mobile_item_plus"><img src="images/plus.png" alt=""></div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_subtitle">безналичная оплата</div>
-                        <div class="mobile_item_plus"><img src="../site_2/images/plus.png" alt=""></div>
+                        <div class="mobile_item_plus"><img src="images/plus.png" alt=""></div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_subtitle">обратная связь</div>
-                        <div class="mobile_item_plus"><img src="../site_2/images/plus.png" alt=""></div>
+                        <div class="mobile_item_plus"><img src="images/plus.png" alt=""></div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_subtitle">разделить
                             стоимость поездки</div>
-                        <div class="mobile_item_plus"><img src="../site_2/images/plus.png" alt=""></div>
+                        <div class="mobile_item_plus"><img src="images/plus.png" alt=""></div>
                     </div>
                 </div>
             </div>
